# lpcore

./: CMakeLists.txt  partitiontable.csv  prog.sh  sdkconfig.defaults.esp32c6
components/bootloader/subproject/main/: CMakeLists.txt  bootloader_start.c
main/: CMakeLists.txt  main.cpp
main/lp_core/: CMakeLists.txt  lp_main.c
